src/objects/SBQQ__AttributeValue__c/fields/SBQQ__ValueDateTime__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__ValueDateTime__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Value (Date Time)</label>
    <type>DateTime</type>
</CustomField>